# casadi_bspline

./: .gitignore  pyproject.toml  readme.md  setup.py
src/: bspline.py  example.py  test.py
