[build-system]
requires = [
  "setuptools",
  "setuptools-scm",
  "numpy",
  "matplotlib",
  "tk",
  "scipy",
  "wheel",
  "casadi",
]
build-backend = "setuptools.build_meta"

[project]
name = "casadi-bspline"
version = "0.0.1"
authors = [
    { name = "Maksim Surov", email = "surov.m.o@gmail.com" }
]
description = "Symbolic B-Spline implementation for CasADi"
readme = "readme.md"
requires-python = ">=3.7"
keywords = ["CasADi", "spline"]
license = { text = "GSL" }
